--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "node-powershell": "^4.0.0",
     "path": "^0.12.7",
     "puppeteer": "^5.5.0"
   }
